Add instructions to HTML file

--- a/index.html
+++ b/index.html
@@ -58,12 +58,11 @@
           </div>
           <div class="modal-body">
             <ul class="list-group">
-              <li class="list-group-item list-group-item-success"></li>
-              <li class="list-group-item list-group-item-success"></li>
-              <li class="list-group-item list-group-item-success"></li>
-              <li class="list-group-item list-group-item-success"></li>
-              <li class="list-group-item list-group-item-success"></li>
-              <li class="list-group-item list-group-item-success"></li>
+              <li class="list-group-item list-group-item-success">Add first number clicking on</li>
+              <li class="list-group-item list-group-item-success">Click operator</li>
+              <li class="list-group-item list-group-item-success">Add second number clicking on</li>
+              <li class="list-group-item list-group-item-success">Click '=' to see the result</li>
+              <li class="list-group-item list-group-item-success">Press 'C' to reset the values</li>
             </ul>
           </div>
           <div class="modal-footer">
