Add logic to calculator

--- a/index.html
+++ b/index.html
@@ -18,31 +18,31 @@
       <table class="w-100"> 
         <tr> 
           <td colspan="3"><input type="text" id="result"/></td> 
-          <td><input type="button" value="c" id="c"/> </td> 
+          <td><input type="button" value="c" id="clear"/> </td> 
         </tr> 
         <tr> 
           <td><input type="button" value="1" id="1"/> </td> 
           <td><input type="button" value="2" id="2"/> </td> 
           <td><input type="button" value="3" id="3"/> </td> 
-          <td><input type="button" value="/" id="/"/> </td> 
+          <td><input type="button" value="/" id="div"/> </td> 
         </tr> 
         <tr> 
           <td><input type="button" value="4" id="4"/> </td> 
           <td><input type="button" value="5" id="5"/> </td> 
           <td><input type="button" value="6" id="6"/> </td> 
-          <td><input type="button" value="-" id="-"/> </td> 
+          <td><input type="button" value="-" id="sub"/> </td> 
         </tr> 
         <tr> 
           <td><input type="button" value="7" id="7"/> </td> 
           <td><input type="button" value="8" id="8"/> </td> 
           <td><input type="button" value="9" id="9"/> </td> 
-          <td><input type="button" value="+" id="+"/> </td> 
+          <td><input type="button" value="+" id="add"/> </td> 
         </tr> 
         <tr> 
-          <td><input type="button" value="." id="."/> </td> 
+          <td><input type="button" value="." id="dec"/> </td> 
           <td><input type="button" value="0" id="0"/> </td> 
-          <td><input type="button" value="=" id="="/> </td> 
-          <td><input type="button" value="*" id="*"/> </td> 
+          <td><input type="button" value="=" id="equal"/> </td> 
+          <td><input type="button" value="*" id="mult"/> </td> 
         </tr> 
       </table> 
     </div>
