Add backspace feature

--- a/index.html
+++ b/index.html
@@ -17,8 +17,12 @@
     <div id="calc" class="w-50 mx-auto my-5">
       <table class="w-100"> 
         <tr> 
-          <td colspan="3"><input type="text" id="result"/></td> 
-          <td><input type="button" value="c" id="clear"/> </td> 
+          <td colspan="4"><input type="text" id="result"/></td> 
+          
+        </tr>
+        <tr>
+          <td colspan="2"><input type="button" value="c" id="clear"/> </td>
+          <td colspan="2"><input type="button" value="back" id="back"/> </td>  
         </tr> 
         <tr> 
           <td><input type="button" value="1" id="1"/> </td> 
